# Orges-Gurakuqi-Cpp-Chess

./: .gitignore  Orges_Gurakuqi_C++_Project.cbp  README.md
campo/: README.md  run.bat
chess/: .gitignore  CMakeLists.txt  README.md
chess/src/: Board.cpp  Board.h  Engine.cpp  Engine.h  Move.cpp  Move.h  main.cpp
include/: person.h  student.h  teacher.h
src/: main.cpp  person.cpp  student.cpp  teacher.cpp
